test/error/MethodAbstractPrivate.ci
public abstract class Test
{
	abstract bool Run(); //ERROR: abstract method cannot be private
}
